--- a/index.html
+++ b/index.html
@@ -29,55 +29,42 @@
                         <thead class="table-head">
                             <tr>
                             <th   class="table-header__day">day &hslash; time</th>
-                            <th class="seven-eight">7 &colon; 00 &dash; 8 &colon; 00</th>
-                            <th class="eight-nine">8 &colon; 00 &dash; 9 &colon; 00</th>
-                            <th class="nine-ten">9 &colon; 00 &dash; 10 &colon; 00</th>
-                            <th class="ten-eleven">10 &colon; 00 &dash; 11 &colon; 00</th>
-                            <th class="eleven-twelve">11 &colon; 00 &dash; 12 &colon; 00</th>
-                            <th class="twelve-one">12 &colon; 00 &dash; 1 &colon; 00</th>
-                            <th class="one-two">1 &colon; 00 &dash; 2 &colon; 00</th>
-                            <th class="two-three">2 &colon; 00 &dash; 3 &colon; 00</th>
-                            <th class="three-four">3 &colon; 00 &dash; 4 &colon; 00</th>
-                            <th class="four-five">4 &colon; 00 &dash; 5 &colon; 00</th>
+                            <th class="nine-ten">8 &colon; 00 &dash; 10 &colon; 00</th>
+                            <th class="twelve-one">10 &colon; 00 &dash; 1 &colon; 00</th>
+                            <th class="four-five">2 &colon; 00 &dash; 5 &colon; 00</th>
                         </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td >monday</td>
+                                <td>ICS2305 (Gachui)</td>
                                 <td>&nbsp;</td>
-                                <td colspan="2">ICS2305 (Gachui)</td>
-                                <td colspan="3">&nbsp;</td>
-                                <td colspan="4">&nbsp;</td>
+                                <td>&nbsp;</td>
                             </tr>
                             <tr>
                                 <td >tuesday</td>
-                                <td>&nbsp;</td>
-                                <td colspan="2">BIT2317(Ms. Esther Maina)</td>
-                                <td colspan="3">BIT2303 (Kelvin Kariuki)</td>
-                                <td>&nbsp;</td>
-                                <td colspan="4">ICS2307 (Adunya)</td>
+                                <td>BIT2317(Ms. Esther Maina)</td>
+                                <td>BIT2303 (Kelvin Kariuki)</td>
+                                <td>ICS2307 (Adunya)</td>
                             </tr>
                             <tr>
                                 
                                 <td >wednesday</td>
-                                <td>&nbsp;</td>
-                                <td colspan="2">BIT2305 (Eric Kokonya)</td>
-                                <td colspan="3">BIT 2119 (A. Kinuthia)</td>
-                                <td>&nbsp;</td>
-                                    <td colspan="3">&nbsp;</td>
+                                <td>BIT2305 (Eric Kokonya)</td>
+                                <td>BIT 2119 (A. Kinuthia)</td>
+                                    <td>&nbsp;</td>
                             </tr>
                             <tr>
                                 <td >thursday</td>
-                                <td>&nbsp;</td>
-                                <td colspan="2">BIT 2210 (Chris Ndambuki)</td>
-                                <td colspan="3">ICS2403 (Mutuma Ichamba)</td>
-                                <td>&nbsp;</td>
-                                    <td colspan="3">ICS2307 (Adunya):LAB</td>
+                                <td>BIT 2210 (Chris Ndambuki)</td>
+                                <td>ICS2403 (Mutuma Ichamba)</td>
+                                <td>ICS2307 (Adunya):LAB</td>
                             </tr>
                             <tr>
                                 <td >friday</td>
-                                <td colspan="3"></td>
-                                <td colspan="7">&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
                                 
                             </tr>
                         </tbody>
